# nearness_control

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: HD2_params.yaml  Husky_params.yaml  Husky_sim_params.yaml  LT2_params.yaml  NearnessControl.cfg  NearnessControl3D.cfg  NearnessControl3D.yaml  NearnessControl3D_50hz.yaml  NearnessControl3D_finals_20hz.yaml  NearnessControl3D_tunnel_20hz.yaml  NearnessController.cfg  NearnessController3D.cfg  NearnessControllerParams.yaml  Zenith_params.yaml  shapes.txt  thesis.rviz  tuning_params.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
cfg/controller_models/FullRobustFinalDesigns/20hz/Finals/K_heading_finals/: K_heading_finals_B
cfg/controller_models/FullRobustFinalDesigns/20hz/Finals/K_lateral_finals/: K_lateral_finals_A  K_lateral_finals_C
cfg/controller_models/FullRobustFinalDesigns/20hz/Finals/K_vertical_finals/: K_vertical_finals_A  K_vertical_finals_B
cfg/controller_models/FullRobustFinalDesigns/20hz/Tunnel/K_heading_final/: K_heading_final_A  K_heading_final_B  K_heading_final_C
cfg/controller_models/FullRobustFinalDesigns/20hz/Tunnel/K_heading_final_faster/: K_heading_final_faster_A  K_heading_final_faster_C
cfg/controller_models/FullRobustFinalDesigns/20hz/Tunnel/K_lateral_final/: K_lateral_final_A  (+1 more)
cfg/controller_models/FullRobustFinalDesigns/50hz/K_heading_final/: K_heading_final_A  K_heading_final_B
cfg/controller_models/FullRobustFinalDesigns/50hz/K_lateral_final/: K_lateral_final_A  K_lateral_final_B
cfg/controller_models/FullRobustFinalDesigns/50hz/K_vertical_final/: K_vertical_final_A  K_vertical_final_B
cfg/controller_models/FullRobustFinalDesigns/Finals/K_heading_finals/: K_heading_finals_A  K_heading_finals_C
cfg/controller_models/FullRobustFinalDesigns/Finals/K_lateral_finals/: K_lateral_finals_B
cfg/controller_models/FullRobustFinalDesigns/Finals/K_vertical_finals/: K_vertical_finals_C
cfg/controller_models/FullRobustFinalDesigns/Tunnel/K_heading_final_faster/: K_heading_final_faster_B
cfg/controller_models/FullRobustFinalDesigns/Tunnel/K_lateral_final/: K_lateral_final_C
cfg/controller_models/FullRobustFinalDesigns/Tunnel/K_vertical_final/: K_vertical_final_A  K_vertical_final_B
cfg/controller_models/K_lateral_slow/: K_lateral_slow_B
cfg/controller_models/old_controllers/: mixsyn_10hz.txt
cfg/controller_models/old_controllers/K_lateral_fast/: K_lateral_fast_A  K_lateral_fast_B  K_lateral_fast_C
cfg/controller_models/old_controllers/K_lateral_loose/: K_lateral_loose_A  K_lateral_loose_B  K_lateral_loose_C
cfg/controller_models/old_controllers/K_lateral_robust_plant/K_lateral_robust_plant/: K_robust_plant_A  K_robust_plant_B  K_robust_plant_C
cfg/controller_models/old_controllers/K_lateral_slow/: K_lateral_slow_A  K_lateral_slow_C
cfg/controller_models/old_controllers/K_lateral_upper_limit_50hz/K_lateral_upper_limit/: K_lateral_upper_limit_A  K_lateral_upper_limit_B  K_lateral_upper_limit_C
include/: command_generator.h
include/nearness_control/: command_generator.h  control_mixer.h  data_collector.h  joy_teleop_mixer.h  marble_joy_interface.h  nearness_control_3d.h  nearness_controller.h  nearness_controller_3d.h  projection_shape_generator.h  trajectory_follower.h  trajectory_generator.h
include/nearness_control/backup/: nearness_controller.h
launch/: 3d_nearness_control.launch  A01-RaIner_nearness_control.launch  data_collector.launch  husky_wfi.launch  launch_HD2_nearness_control.launch  nearness_control.launch  record_model_data.launch  rosbag_record_3d_nearness.launch  sim.launch  sim_setup.launch  sim_wfi.launch  tracked_bot_nearness.launch  urban_ug.launch
launch/marble/: .launch_tuning.launch.swp  cave_nearness_control.launch  cave_nearness_control_sim.launch  launch_HD2_cave_nearness_control.launch  launch_HD2_nearness_control.launch  launch_Husky_cave_nearness_control.launch  launch_Husky_nearness_control.launch  launch_LT2_nearness_control.launch  launch_Zenith_nearness_control.launch  launch_cave_low_level_control.launch  launch_cave_nearness_control.launch  launch_octomap.launch  launch_tuning.launch  marble_joy_interface.launch  nearness_control.launch  nearness_control_HD2.launch  octomap_laserscan.launch  sim_nearness_control.launch  tracked_bot_nav.launch  tracked_bot_nearness.launch  tracked_bot_startup.launch  trajectory_follower.launch  trajectory_generator.launch
launch/sim/: 3d_nearness_control.launch  command_generator.launch  control_mixer.launch  data_collector.launch  joy_teleop_mixer.launch  launch_joy_teleop_mixer.launch  launch_sim_low_level_control.launch  launch_sim_nearness_control.launch  launch_tf2odom.launch  rosbag_record_3d_nearness.launch  sim_teleop.launch  sim_wfi.launch  tf2odom.launch  twist_mux.launch
launch/thesis/: 3d_nearness_control.launch  record_model_data.launch  rosbag_record_3d_nearness.launch  sim.launch  tf2odom.launch
msg/: ClusterMsg.msg  FourierCoefsMsg.msg
scripts/: H01_h_scan_visualizer.py  extract_rosbag.txt  h_scan_visualizer.py  launch_sim.txt  record_bag.txt  scan_visualizer_sf.py  sim_h_scan_visualizer.py  v_scan_visualizer.py
sim_vehicle/ohrad_x3_sensor_config_2/: CMakeLists.txt  model.sdf  package.xml
sim_vehicle/ohrad_x3_sensor_config_2/launch/: description.launch  spawner.rb  vehicle_topics.launch
sim_vehicle/ohrad_x3_sensor_config_2/urdf/: x3_from_sdf.xacro
src/: cmd_generator_node.cpp  command_generator.cpp  command_generator_node.cpp  control_mixer.cpp  control_mixer_node.cpp  data_collector.cpp  data_collector_node.cpp  joy_teleop_mixer.cpp  joy_teleop_mixer_node.cpp  marble_joy_interface.cpp  marble_joy_interface_node.cpp  nearness_control.cpp  nearness_control_3d.cpp  nearness_control_3d_node.cpp  nearness_controller.cpp  nearness_controller_node.cpp  nearness_controller_timing.cpp  projection_shape_generator.cpp  tf2odom.cpp  trajectory_follower.cpp  trajectory_follower_node.cpp  trajectory_generator.cpp  trajectory_generator_node.cpp
src/backup/: nearness_control_3d0.cpp  nearness_controller.cpp  nearness_controller_node.cpp
(+1 files in other folders)
